k8s_dev CORS enabled for all methods.